# mdmt-server-crates

./: Cargo.toml
cgraph-macros/: Cargo.toml
cgraph-macros/src/: lib.rs
cgraph-macros/tests/: tests.rs
context-macros/: Cargo.toml
context-macros/src/: lib.rs
context-macros/tests/: test_success.rs
context-macros/tests/ui/: fail_missing_iecid.rs  fail_missing_iecid.stderr
event-opcode/: Cargo.toml
event-opcode/src/: lib.rs
event-opcode/tests/: ui_tests.rs
event-opcode/tests/ui/: fail_bad_suffix.rs  fail_bad_suffix.stderr  fail_only_suffix.rs  fail_only_suffix.stderr  test_success.rs
use-context/: Cargo.toml
use-context/src/: main.rs
use-context/src/algorithm/: apparent_frequencies_ctx.rs  bound.rs  bounds.rs
use-context/src/algorithm/unit_area/: ctx.rs  eval.rs
use-context/src/domain/calculations/: calculation_graph.rs  calculations.rs  mod.rs
use-context/src/domain/context/: context.rs  initial_ctx.rs  raw_context.rs
use-context/src/domain/project_tree/: project_nodes.rs  project_tree.rs
use-context/src/domain/snapshot/: mod.rs  snapshot.rs
