
[workspace]
members = [
    "cgraph-macros",    # Библиотека, Макрос #[eval_depend]
    "context-macros",   # Библиотека, Макрос #[derive(ContextAccess)]
    "event-opcode",     # Библиотека, Макрос #[derive(EventOpCode)]
    "use-context",  # Тестовое приложение
]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["sa-lab"]
